--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "immer": "^10.1.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^8.0.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
+    "sort-by": "^1.2.0",
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
