--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "server": "json-server --watch src/data/db.json --port 3000"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.1.11",
+    "@tanstack/react-query": "^5.82.0",
     "axios": "^1.10.0",
     "immer": "^10.1.1",
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "tailwindcss": "^4.1.11",
     "use-immer": "^0.11.0"
   },
   "devDependencies": {
