--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "json-server": "^1.0.0-beta.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
     "tailwindcss": "^4.1.11",
     "use-immer": "^0.11.0"
   },
