--- a/package.json
+++ b/package.json
@@ -15,12 +15,15 @@
     "@tanstack/react-query": "^5.82.0",
     "@tanstack/react-query-devtools": "^5.82.0",
     "axios": "^1.10.0",
+    "firebase": "^11.10.0",
     "immer": "^10.1.1",
     "json-server": "^1.0.0-beta.3",
     "motion": "^12.23.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-hook-form": "^7.60.0",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11",
     "use-immer": "^0.11.0"
   },
